k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: template-mono-repo
spec:
  selector:
    app: api
  ports:
    - port: 3001
      targetPort: 3001
  type: ClusterIP
