k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: template-mono-repo
spec:
  selector:
    app: web
  ports:
    - port: 5173
      targetPort: 5173
  type: ClusterIP
